--- a/p8451_mem2371_hw0.md
+++ b/p8451_mem2371_hw0.md
@@ -31,55 +31,78 @@ features of the dataset.
 table_one = tableby(~ age + bmi + glucose + insulin
                     + homa + leptin + adiponectin 
                     + resistin + mcp_1, data = bc_data,
-                    numeric.stats = c("mean","median", "min", "max"))
+                    numeric.stats = c("mean","median", "range"))
 
 summary(table_one)
 ```
 
-|                 | Overall (N=116) |
-| :-------------- | :-------------: |
-| **age**         |                 |
-| Mean            |     57.302      |
-| Median          |     56.000      |
-| Min             |     24.000      |
-| Max             |     89.000      |
-| **bmi**         |                 |
-| Mean            |     27.582      |
-| Median          |     27.662      |
-| Min             |     18.370      |
-| Max             |     38.579      |
-| **glucose**     |                 |
-| Mean            |     97.793      |
-| Median          |     92.000      |
-| Min             |     60.000      |
-| Max             |     201.000     |
-| **insulin**     |                 |
-| Mean            |     10.012      |
-| Median          |      5.925      |
-| Min             |      2.432      |
-| Max             |     58.460      |
-| **homa**        |                 |
-| Mean            |      2.695      |
-| Median          |      1.381      |
-| Min             |      0.467      |
-| Max             |     25.050      |
-| **leptin**      |                 |
-| Mean            |     26.615      |
-| Median          |     20.271      |
-| Min             |      4.311      |
-| Max             |     90.280      |
-| **adiponectin** |                 |
-| Mean            |     10.181      |
-| Median          |      8.353      |
-| Min             |      1.656      |
-| Max             |     38.040      |
-| **resistin**    |                 |
-| Mean            |     14.726      |
-| Median          |     10.828      |
-| Min             |      3.210      |
-| Max             |     82.100      |
-| **mcp\_1**      |                 |
-| Mean            |     534.647     |
-| Median          |     471.322     |
-| Min             |     45.843      |
-| Max             |    1698.440     |
+|                 |  Overall (N=116)  |
+| :-------------- | :---------------: |
+| **age**         |                   |
+| Mean            |      57.302       |
+| Median          |      56.000       |
+| Range           |  24.000 - 89.000  |
+| **bmi**         |                   |
+| Mean            |      27.582       |
+| Median          |      27.662       |
+| Range           |  18.370 - 38.579  |
+| **glucose**     |                   |
+| Mean            |      97.793       |
+| Median          |      92.000       |
+| Range           | 60.000 - 201.000  |
+| **insulin**     |                   |
+| Mean            |      10.012       |
+| Median          |       5.925       |
+| Range           |  2.432 - 58.460   |
+| **homa**        |                   |
+| Mean            |       2.695       |
+| Median          |       1.381       |
+| Range           |  0.467 - 25.050   |
+| **leptin**      |                   |
+| Mean            |      26.615       |
+| Median          |      20.271       |
+| Range           |  4.311 - 90.280   |
+| **adiponectin** |                   |
+| Mean            |      10.181       |
+| Median          |       8.353       |
+| Range           |  1.656 - 38.040   |
+| **resistin**    |                   |
+| Mean            |      14.726       |
+| Median          |      10.828       |
+| Range           |  3.210 - 82.100   |
+| **mcp\_1**      |                   |
+| Mean            |      534.647      |
+| Median          |      471.322      |
+| Range           | 45.843 - 1698.440 |
+
+## Question 1: Recoding BMI
+
+The code chunk below will recode BMI into the WHO defined categories.
+
+``` r
+bc_data %>% 
+  mutate(
+    bmi_cat = case_when(bmi < 16.5 ~ "severely underweight", 
+                        bmi < 18.5 ~ "underweight",
+                        bmi >= 18.5 & bmi < 25 ~ "normal",
+                        bmi >= 25 & bmi < 30 ~ "overweight",
+                        bmi >= 30 & bmi < 35 ~ "obese class I",
+                        bmi >= 35 & bmi < 40 ~ "obese class II",
+                        bmi >= 40 ~ "obese class III"))
+```
+
+    ## # A tibble: 116 x 11
+    ##      age   bmi glucose insulin  homa leptin adiponectin resistin mcp_1
+    ##    <dbl> <dbl>   <dbl>   <dbl> <dbl>  <dbl>       <dbl>    <dbl> <dbl>
+    ##  1    48  23.5      70    2.71 0.467   8.81        9.70     8.00  417.
+    ##  2    83  20.7      92    3.12 0.707   8.84        5.43     4.06  469.
+    ##  3    82  23.1      91    4.50 1.01   17.9        22.4      9.28  555.
+    ##  4    68  21.4      77    3.23 0.613   9.88        7.17    12.8   928.
+    ##  5    86  21.1      92    3.55 0.805   6.70        4.82    10.6   774.
+    ##  6    49  22.9      92    3.23 0.732   6.83       13.7     10.3   530.
+    ##  7    89  22.7      77    4.69 0.891   6.96        5.59    12.9  1256.
+    ##  8    76  23.8     118    6.47 1.88    4.31       13.3      5.10  281.
+    ##  9    73  22        97    3.35 0.802   4.47       10.4      6.28  137.
+    ## 10    75  23        83    4.95 1.01   17.1        11.6      7.09  318.
+    ## # … with 106 more rows, and 2 more variables: classification <dbl>,
+    ## #   bmi_cat <chr>
