--- a/p8451_mem2371_hw0.md
+++ b/p8451_mem2371_hw0.md
@@ -9,6 +9,23 @@ P8451.
 ``` r
 library(tidyverse)
 library(arsenal)
+library(ggplot2)
+
+knitr::opts_chunk$set(
+  fig.width = 6,
+  fig.asp = 0.6,
+  out.width = "90%"
+)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_color_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
 ```
 
 ## Question 1: Summary Table
@@ -19,7 +36,13 @@ The code chunk below imports and cleans the data.
 bc_data = 
   read_csv("./data/bcdata_Assignment1.csv",
            na = "") %>% 
-  janitor::clean_names()
+  janitor::clean_names() %>% 
+  mutate(
+    classification = as.factor(classification),
+    bc = recode(
+      classification, 
+      "1" = "0", 
+      "2" = "1"))
 ```
 
 The dataset contains 10 variables and 116 observations.
@@ -75,12 +98,13 @@ summary(table_one)
 | Median          |      471.322      |
 | Range           | 45.843 - 1698.440 |
 
-## Question 1: Recoding BMI
+## Question 2: Recoding BMI
 
 The code chunk below will recode BMI into the WHO defined categories.
 
 ``` r
-bc_data %>% 
+bc_data_rec =   
+  bc_data %>% 
   mutate(
     bmi_cat = case_when(bmi < 16.5 ~ "severely underweight", 
                         bmi < 18.5 ~ "underweight",
@@ -91,18 +115,72 @@ bc_data %>%
                         bmi >= 40 ~ "obese class III"))
 ```
 
-    ## # A tibble: 116 x 11
-    ##      age   bmi glucose insulin  homa leptin adiponectin resistin mcp_1
-    ##    <dbl> <dbl>   <dbl>   <dbl> <dbl>  <dbl>       <dbl>    <dbl> <dbl>
-    ##  1    48  23.5      70    2.71 0.467   8.81        9.70     8.00  417.
-    ##  2    83  20.7      92    3.12 0.707   8.84        5.43     4.06  469.
-    ##  3    82  23.1      91    4.50 1.01   17.9        22.4      9.28  555.
-    ##  4    68  21.4      77    3.23 0.613   9.88        7.17    12.8   928.
-    ##  5    86  21.1      92    3.55 0.805   6.70        4.82    10.6   774.
-    ##  6    49  22.9      92    3.23 0.732   6.83       13.7     10.3   530.
-    ##  7    89  22.7      77    4.69 0.891   6.96        5.59    12.9  1256.
-    ##  8    76  23.8     118    6.47 1.88    4.31       13.3      5.10  281.
-    ##  9    73  22        97    3.35 0.802   4.47       10.4      6.28  137.
-    ## 10    75  23        83    4.95 1.01   17.1        11.6      7.09  318.
-    ## # … with 106 more rows, and 2 more variables: classification <dbl>,
-    ## #   bmi_cat <chr>
+## Question 3: Bar Chart
+
+The code below creates a bar chart representing the cases and controls
+of breast cancer per BMI category. The legend denotes breast cancer
+classifications, where 0 corresponds to healthy controls and 1
+corresponds to cases.
+
+``` r
+bc_data_rec %>% 
+  group_by(bc, bmi_cat) %>% 
+  count(bc) %>% 
+  ggplot(aes(x = bmi_cat, y = n, fill = bc)) + 
+    geom_bar(position = "dodge", stat = "identity") +
+    labs(x = "BMI category",
+         y = "Number of cases or controls")
+```
+
+<img src="p8451_mem2371_hw0_files/figure-gfm/unnamed-chunk-4-1.png" width="90%" />
+
+## Question 4: Logistic Regression
+
+The code below runs a logistic regression model with breast cancer as
+the outcome and glucose, HOMA, leptin, BMI and age as the independent
+variables. The beta estimate, OR and 95% confidence intervals are
+presented for a one-unit change in HOMA.
+
+``` r
+glm(bc ~ glucose + homa + leptin + bmi + age, data = bc_data, family = binomial()) %>% 
+  broom::tidy() %>% 
+  mutate(
+    OR = exp(estimate),
+    CI_lower = exp(estimate - 1.96 * std.error),
+    CI_upper = exp(estimate + 1.96 * std.error)
+  ) %>% 
+  select(term, estimate, OR, starts_with("CI")) %>% 
+  filter(str_detect(term, "homa")) %>% 
+  mutate(
+    term = str_replace(term, "homa", "HOMA: ")) %>% 
+  knitr::kable(digits = 3)
+```
+
+| term  | estimate |    OR | CI\_lower | CI\_upper |
+| :---- | -------: | ----: | --------: | --------: |
+| HOMA: |    0.274 | 1.315 |     0.939 |     1.842 |
+
+## Question 5: Linear Regression
+
+The code below runs a linear regression model with insulin as the
+outcome and BMI, age, and glucose as the independent variables. The
+estimate and 95% confidence intervals for a one-unit change in age are
+presented.
+
+``` r
+lm(insulin ~ bmi + age + glucose, data = bc_data) %>% 
+  broom::tidy() %>% 
+  mutate(
+    CI_lower = exp(estimate - 1.96 * std.error),
+    CI_upper = exp(estimate + 1.96 * std.error)
+  ) %>% 
+  select(term, estimate, starts_with("CI")) %>% 
+  filter(str_detect(term, "age")) %>% 
+  mutate(
+    term = str_replace(term, "age", "Age: ")) %>% 
+  knitr::kable(digits = 3)
+```
+
+| term | estimate | CI\_lower | CI\_upper |
+| :--- | -------: | --------: | --------: |
+| Age: |  \-0.054 |     0.856 |     1.049 |
